@@ -29,27 +29,15 @@ LIB_JARS=`ls $LIB_DIR|grep .jar|awk '{print "'$LIB_DIR'/"$0}'|tr "\n" ":"`
 
 JAVA_OPTS=" -Djava.awt.headless=true -Djava.net.preferIPv4Stack=true"
 
-JAVA_DEBUG_OPTS=""
-if [ "$1" = "debug" ]; then
-    JAVA_DEBUG_OPTS=" -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n "
-fi
+JAVA_MEM_OPTS=" -server -Xms2g -Xmx2g -Xmn1g -XX:MaxDirectMemorySize=1g -XX:+UseG1GC "
 
-JAVA_JMX_OPTS=""
-if [ "$1" = "jmx" ]; then
-    JAVA_JMX_OPTS=" -Dcom.sun.management.jmxremote.port=1099 -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false "
-fi
-
-JAVA_MEM_OPTS=""
-BITS=`java -version 2>&1 | grep -i 64-bit`
-if [ -n "$BITS" ]; then
-    JAVA_MEM_OPTS=" -server -Xmx2g -Xms2g -Xmn1g -XX:MaxMetaspaceSize=256m -Xss1m -XX:+DisableExplicitGC
-    -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:+UseCMSCompactAtFullCollection -XX:LargePageSizeInBytes=128m -XX:+UseFastAccessorMethods -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70"
-else
-    JAVA_MEM_OPTS=" -server -Xms512m -Xmx512m -XX:PermSize=128m -XX:SurvivorRatio=2 -XX:+UseParallelGC "
-fi
+JAVA_MEM_OPTS="${JAVA_MEM_OPTS} -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=320m"
+JAVA_MEM_OPTS="${JAVA_MEM_OPTS} -XX:-OmitStackTraceInFastThrow -XX:+HeapDumpOnOutOfMemoryError
+                    -XX:HeapDumpPath=${LOGS_DIR}/java_heap_dump.hprof"
+JAVA_MEM_OPTS="${JAVA_MEM_OPTS} -XX:-UseLargePages"
 
 echo "Service is starting..."
-nohup java $JAVA_OPTS $JAVA_MEM_OPTS $JAVA_DEBUG_OPTS $JAVA_JMX_OPTS \
+nohup java $JAVA_OPTS $JAVA_MEM_OPTS \
 -classpath \
 $CONF_DIR:$LIB_JARS com.github.masterdxy.gateway.Bootstrap > $STDOUT_FILE 2>&1 &
 
